[tool.poetry]
name = "algorithms-project-68"
version = "0.1.0"
description = ""
authors = ["Nazar Annakhalov <nazar.annahalov@yandex.ru>"]
readme = "README.md"
packages = [{include = "algorithms_project_68"}]

[tool.poetry.dependencies]
python = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
